# aibox

./: .gitmodules  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni.cpp
android/app/src/main/cpp/core/: core.h
android/app/src/main/java/aaiiaaii/io/aibox/: MainActivity.java
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/aaiiaaii/io/aibox/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/aaiiaaii/io/aibox/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  jni.cpp
app/src/main/cpp/core/: CMakeLists.txt
app/src/main/cpp/core/hid/: mouse.cpp  mouse.h  otg.cpp  otg.h
app/src/main/java/aaiiaaii/io/aibox/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
source/: .clang-format  .gitignore  CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp
source/base/: CMakeLists.txt  alignment.h  file_utils.cpp  file_utils.h  fps_counter.h  logging.cpp  logging.h  pid.cpp  pid.h  static_vector.h  types.h  wsq.h
source/core/: CMakeLists.txt  core.cpp  core.h
source/core/aimbot/: aimbot_debug.cpp  aimbot_debug.h  aimbot_fps.cpp  aimbot_fps.h
source/core/cv/: model.cpp  model.h
source/core/cv/rknn/: model_rknn.cpp  model_rknn.h
source/core/hid/: mouse.cpp  mouse.h  otg.cpp  otg.h
source/core/model/: model.cpp  model.h  object_detector.cpp  object_detector.h
source/core/model/rknn/: model_rknn.cpp  model_rknn.h
source/core/model/yolo/: yolo.cpp  yolo.h  yolo_v6.cpp  yolo_v6.h
source/core/usb/: config.cpp  config.h  hid_device_descriptor.cpp  hid_device_descriptor.h  hid_device_identifer.h  hid_gadget_descriptor.cpp  hid_gadget_descriptor.h  input_device.cpp  input_device.h  input_hid_device.cpp  input_hid_device.h  mouse.cpp  mouse.h  output_device.cpp  output_device.h  output_hid_device.cpp  output_hid_device.h  report_descriptor.cpp  report_descriptor.h  usb_gadget.cpp  usb_gadget.h
source/core/usb/hid-parser/: descriptor.cpp  descriptor.h  item.cpp  item.h  parser.cpp  parser.h  report.cpp  report.h  units.cpp  units.h  usages.h
source/core/usb/mouse/: input_mouse.cpp  input_mouse.h  mouse.cpp  mouse.h  output_mouse.cpp  output_mouse.h  proxy_mouse.cpp  proxy_mouse.h
source/core/video/: edid.h  video_capture.cpp  video_capture.h
source/scripts/: boot.sh  install.sh  run.sh
source/tests/: CMakeLists.txt
source/tests/core/: hid-parser.cpp  input_device.cpp  video_capture.cpp
