add_library(core STATIC
        core.cpp
        core.h
        usb/mouse.cpp
        usb/mouse.h
        usb/usb_gadget.cpp
        usb/usb_gadget.h
        usb/report_descriptor.cpp
        usb/report_descriptor.h
        usb/config.cpp
        usb/config.h
        usb/hid-parser/descriptor.cpp
        usb/hid-parser/descriptor.h
        usb/hid-parser/item.cpp
        usb/hid-parser/item.h
        usb/hid-parser/parser.cpp
        usb/hid-parser/parser.h
        usb/hid-parser/report.cpp
        usb/hid-parser/report.h
        usb/hid-parser/units.cpp
        usb/hid-parser/units.h
        usb/hid-parser/usages.h
        model/model.cpp
        model/model.h
        model/rknn/model_rknn.cpp
        model/rknn/model_rknn.h
        model/yolo/yolo_v6.cpp
        model/yolo/yolo_v6.h
        model/object_detector.cpp
        model/object_detector.h
        model/yolo/yolo.cpp
        model/yolo/yolo.h
        usb/input_device.cpp
        usb/input_device.h
        usb/output_device.cpp
        usb/output_device.h
)

target_link_libraries(core base hid-rp libusbgx rga rknn CImg -lpthread)