add_library(core STATIC
        core.cpp
        core.h
        usb/usb_gadget.cpp
        usb/usb_gadget.h
        usb/hid_gadget_descriptor.cpp
        usb/hid_gadget_descriptor.h
        usb/hid-parser/descriptor.cpp
        usb/hid-parser/descriptor.h
        usb/hid-parser/item.cpp
        usb/hid-parser/item.h
        usb/hid-parser/parser.cpp
        usb/hid-parser/parser.h
        usb/hid-parser/report.cpp
        usb/hid-parser/report.h
        usb/hid-parser/units.cpp
        usb/hid-parser/units.h
        usb/hid-parser/usages.h
        model/model.cpp
        model/model.h
        model/rknn/model_rknn.cpp
        model/rknn/model_rknn.h
        model/yolo/yolo_v6.cpp
        model/yolo/yolo_v6.h
        model/object_detector.cpp
        model/object_detector.h
        model/yolo/yolo.cpp
        model/yolo/yolo.h
        usb/input_hid_device.cpp
        usb/input_hid_device.h
        usb/output_hid_device.cpp
        usb/output_hid_device.h
        usb/mouse/mouse.cpp
        usb/mouse/mouse.h
        usb/mouse/input_mouse.cpp
        usb/mouse/input_mouse.h
        usb/mouse/output_mouse.cpp
        usb/mouse/output_mouse.h
        usb/mouse/proxy_mouse.cpp
        usb/mouse/proxy_mouse.h
        usb/hid_device_identifer.h)

target_link_libraries(core base usb-1.0 hid-rp libusbgx rga rknn CImg -lpthread)